log.txt
------make------
1600772759760
Tue Sep 22 19:05:59 CST 2020
cd nemu && make
------make------
1600772760039
Tue Sep 22 19:06:00 CST 2020
make-[1]: Entering directory '/home/pa191220177/pa2020_fall/nemu'
gcc -ggdb3 -MMD -MP -Wall -Werror -O2 -I./include -I../include -I../libs -I../libs/nemu-ref/include   -c -o src/cpu/decode/opcode.o src/cpu/decode/opcode.c
src/cpu/decode/opcode.c:6:22: error: 'or_r2rm_b' undeclared here (not in a function); did you mean 'or_r2rm_v'?
     /* 0x08 - 0x0b*/ or_r2rm_b, or_r2rm_v, or_rm2r_b, or_rm2r_v,
                      ^~~~~~~~~
                      or_r2rm_v
src/cpu/decode/opcode.c:6:44: error: 'or_rm2r_b' undeclared here (not in a function); did you mean 'mov_rm2r_b'?
     /* 0x08 - 0x0b*/ or_r2rm_b, or_r2rm_v, or_rm2r_b, or_rm2r_v,
                                            ^~~~~~~~~
                                            mov_rm2r_b
src/cpu/decode/opcode.c:6:55: error: 'or_rm2r_v' undeclared here (not in a function); did you mean 'or_r2rm_v'?
     /* 0x08 - 0x0b*/ or_r2rm_b, or_r2rm_v, or_rm2r_b, or_rm2r_v,
                                                       ^~~~~~~~~
                                                       or_r2rm_v
make-[1]: *** [<builtin>: src/cpu/decode/opcode.o] Error 1
make-[1]: Leaving directory '/home/pa191220177/pa2020_fall/nemu'
cd testcase && make
------make------
1600772760090
Tue Sep 22 19:06:00 CST 2020
make-[1]: Entering directory '/home/pa191220177/pa2020_fall/testcase'
gcc -ggdb3 -MMD -MP -Wall -m32 -march=i386 -fno-builtin -fno-stack-protector -I../include -I../libs/newlib/include -c -o src/start.o start.S	
make-[1]: Leaving directory '/home/pa191220177/pa2020_fall/testcase'
cd kernel && make
------make------
1600772760132
Tue Sep 22 19:06:00 CST 2020
make-[1]: Entering directory '/home/pa191220177/pa2020_fall/kernel'
make-[1]: 'kernel' is up to date.
make-[1]: Leaving directory '/home/pa191220177/pa2020_fall/kernel'
